# shuup-rest-api

./: .travis.yml  MANIFEST.in  README.md  requirements-test.txt  setup.cfg
shuup_rest_api/: api.py  apps.py
shuup_rest_api/locale/en/LC_MESSAGES/: django.po
shuup_rest_api/serializers/: __init__.py  label.py
shuup_rest_api/views/: address.py  attribute.py  basket.py  category.py  contact_group.py  contact_group_price_display.py  contacts.py  customer_group_pricing.py  front_orders.py  front_passwords.py  front_products.py  front_users.py  manufacturer.py  mixins.py  orders.py  product_media.py  product_variation.py  products.py  refunds.py  service.py  shipments.py  shop.py  suppliers.py  tax.py  tax_class.py  units.py  users.py
shuup_rest_api_tests/: basket_helpers.py  conftest.py  settings.py  test_address.py  test_attributes_api.py  test_basket_api.py  test_basket_customer.py  test_basket_from_order.py  test_basket_packages.py  test_category_api.py  test_cgp_api.py  test_contact_api.py  test_contact_group_api.py  test_contact_group_display_api.py  test_front_orders_api.py  test_front_passwords.py  test_front_products_api.py  test_front_users_api.py  test_manufacturer_api.py  test_order_api.py  test_payments_api.py  test_product_media_api.py  test_product_type_api.py  test_product_variations_api.py  test_products_api.py  test_refunds.py  test_sales_unit_api.py  test_shipments_api.py  test_shop_api.py  test_suppliers_api.py  test_tax_class_api.py  test_users_api.py  urls.py  utils.py
